/**
 * @Author: zjj
 * @Date: 2025/11/12
 * @Desc: 通用 proto
**/

syntax = "proto3";

package pb3;

option go_package = "server/internal/protocol";

import "system.proto";

message PlayerSimpleData {
    uint64 role_id = 1;
    uint32 job = 2;
    uint32 sex = 3;
    uint32 level = 4;
    string role_name = 5;
    uint32 gm_level = 6;// GM等级: 0=普通玩家 1=GM 2=高级GM 3=超级GM
}

// 玩家信息
message PlayerRoleData {
    PlayerRoleMainData main_data = 1; // 主要的数据
    PlayerRoleBinaryData binary_data = 2;// 二进制数据
}

message PlayerRoleMainData {
    uint64 role_id = 1;
    uint32 job = 2;
    uint32 sex = 3;
    uint32 level = 4;
    string role_name = 5;
    uint32 gm_level = 6;// GM等级: 0=普通玩家 1=GM 2=高级GM 3=超级GM
    int64 last_login_time = 7;// 最近登录时间
    int64 last_logout_time = 8;// 最近登出时间
}

message PlayerRoleBinaryData {
    map<uint32, uint32> sys_open_status = 1;// 功能开启
    SiLevelData level_data = 2;
    SiSkillData skill_data = 3;// 技能数据
}
